--- a/Angular/package.json
+++ b/Angular/package.json
@@ -11,46 +11,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.5",
-    "@angular/common": "~10.2.5",
-    "@angular/compiler": "~10.2.5",
-    "@angular/core": "~10.2.5",
-    "@angular/forms": "~10.2.5",
-    "@angular/platform-browser": "~10.2.5",
-    "@angular/platform-browser-dynamic": "~10.2.5",
-    "@angular/router": "~10.2.5",
+    "@angular/animations": "~17.2.3",
+    "@angular/common": "~17.2.3",
+    "@angular/compiler": "~17.2.3",
+    "@angular/core": "~17.2.3",
+    "@angular/forms": "~17.2.3",
+    "@angular/platform-browser": "~17.2.3",
+    "@angular/platform-browser-dynamic": "~17.2.3",
+    "@angular/router": "~17.2.3",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.3",
-    "@angular-eslint/builder": "1.2.0",
-    "@angular-eslint/eslint-plugin": "1.2.0",
-    "@angular-eslint/eslint-plugin-template": "1.2.0",
-    "@angular-eslint/schematics": "1.2.0",
-    "@angular-eslint/template-parser": "1.2.0",
-    "@angular/cli": "~10.2.3",
-    "@angular/compiler-cli": "~10.2.5",
-    "@angular/language-service": "~10.2.5",
+    "@angular-devkit/build-angular": "~17.2.2",
+    "@angular-eslint/builder": "^12.0.0",
+    "@angular-eslint/eslint-plugin": "^12.0.0",
+    "@angular-eslint/eslint-plugin-template": "^12.0.0",
+    "@angular-eslint/schematics": "17.2.1",
+    "@angular-eslint/template-parser": "^12.0.0",
+    "@angular/cli": "~17.2.2",
+    "@angular/compiler-cli": "~17.2.3",
+    "@angular/language-service": "~17.2.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.0.7"
+    "typescript": "~5.3.3"
   }
 }
